<resources>
    <string name="app_name">Friendly Chat</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="about">About</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_about">about</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="spam">Spam</string>
    <string name="pornography">Pornography</string>
    <string name="abuse">Abuse</string>
    <string name="illegal_drug">Illegal Drug</string>
    <string name="other">Other</string>
    <string name="Profile">Profile</string>
</resources>
