<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ll_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/padding_10"
        android:paddingEnd="@dimen/padding_10"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/spam"
            app:layout_constraintBottom_toTopOf="@+id/radioButton2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_chainStyle="packed" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/pornography"
            app:layout_constraintBottom_toTopOf="@+id/radioButton3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/abuse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/illegal_drug"
            app:layout_constraintBottom_toTopOf="@+id/radioButton4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioButton2" />

        <EditText
            android:id="@+id/et_callback"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="name"
            android:inputType="text"
            android:paddingStart="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_10"
            android:hint="Others" />
    </RadioGroup>


    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_10"
        android:paddingEnd="@dimen/padding_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup">


        <Button
            android:id="@+id/btn_ok_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report" />

        <Button
            android:id="@+id/btn_cancel_dialog_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>